# xpic

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  build.sh  config.json  header.sh  readme.md  run-clang-format.sh  run-clang-tidy.sh  run-tests.sh  run.sh  test.json
tests/: CMakeLists.txt  chin_common.h  chin_crossed_fields.cpp  chin_crossed_gradient.cpp  chin_curvilinear_b.cpp  chin_gyration.cpp  chin_linear_b.cpp  chin_polarization.cpp  chin_uniform_b.cpp  common.h  drift_crossed_fields.cpp  gyration.cpp
tests/basic/: CMakeLists.txt  basic_ex1.cpp
tests/basic/expected/basic_ex1/: config.json
tests/basic/expected/basic_ex1/B/: 050  100
tests/basic/expected/basic_ex1/E/: 050  100
tests/basic/expected/basic_ex1/temporal/: charge_conservation.txt  energy.txt  energy_conservation.txt  momentum_conservation.txt
tests/basic/output/basic_ex1/B/: 050  100
tests/basic/output/basic_ex1/temporal/: charge_conservation.txt  energy_conservation.txt
tests/boris_push/: boris_push.h  boris_push_ex1.cpp  boris_push_ex2.cpp  boris_push_ex3.cpp  boris_push_ex4.cpp  boris_push_ex5.cpp  boris_push_ex6.cpp  boris_push_trajectories.py  common.h
tests/boris_push/expected/boris_push_ex1/temporal/: B1A.txt  B1B.txt  B2B.txt  BLF.txt  C1A.txt  C1B.txt  C2A.txt  CLF.txt  M1A.txt  M1B.txt  M2A.txt  M2B.txt  MLF.txt
tests/boris_push/expected/boris_push_ex2/temporal/: B1A.txt  B1B.txt  B2B.txt  BLF.txt
tests/boris_push/expected/boris_push_ex3/temporal/: B1A.txt  B1B.txt  B2B.txt  BLF.txt
tests/boris_push/expected/boris_push_ex4/temporal/: EB1A.txt  EB1B.txt  EB2B.txt  EBLF.txt
tests/boris_push/expected/boris_push_ex5/temporal/: EB1A.txt  EB1B.txt  EB2B.txt  EBLF.txt
tests/boris_push/expected/boris_push_ex6/temporal/: EB1A.txt  EB1B.txt  EB2B.txt  EBLF.txt
tests/chin/: CMakeLists.txt  boris_push_ex1.cpp  boris_push_ex2.cpp  boris_push_ex3.cpp  boris_push_ex4.cpp  boris_push_ex5.cpp  boris_push_ex6.cpp  common.h  crossed_fields.cpp  crossed_gradient.cpp  curvilinear_b.cpp  linear_b.cpp  polarization.cpp  uniform_b.cpp
tests/chin/expected/boris_push_ex1/temporal/: B1A.txt  B1B.txt  B2B.txt  BLF.txt  C1A.txt  C1B.txt  C2A.txt  CLF.txt  M1A.txt  M1B.txt  M2A.txt  M2B.txt  MLF.txt
tests/chin/expected/boris_push_ex2/temporal/: B1A.txt  B1B.txt  B2B.txt  BLF.txt
tests/chin/expected/boris_push_ex3/temporal/: B1A.txt  B1B.txt  B2B.txt  BLF.txt
tests/chin/expected/boris_push_ex4/temporal/: EB1A.txt  EB2B.txt
tests/chin/expected/boris_push_ex5/temporal/: EB1A.txt  EB1B.txt  EB2B.txt  EBLF.txt
tests/chin/expected/boris_push_ex6/temporal/: EB1A.txt  EB1B.txt  EB2B.txt  EBLF.txt
tests/chin/output/: boris_push_ex1_B1A.txt  boris_push_ex1_B1B.txt  boris_push_ex1_B2B.txt  boris_push_ex1_BLF.txt  boris_push_ex1_C1A.txt  boris_push_ex1_C1B.txt  boris_push_ex1_C2A.txt  boris_push_ex1_CLF.txt  boris_push_ex1_M1A.txt  boris_push_ex1_M1B.txt  boris_push_ex1_M2A.txt  boris_push_ex1_M2B.txt  boris_push_ex1_MLF.txt  boris_push_ex2_B1A.txt  boris_push_ex2_B1B.txt  boris_push_ex2_B2B.txt  boris_push_ex2_BLF.txt  boris_push_ex2_MLF.txt  boris_push_ex3_B1A.txt  boris_push_ex3_B1B.txt  boris_push_ex3_B2B.txt  boris_push_ex3_BLF.txt  boris_push_ex4_EB1A.txt  boris_push_ex4_EB1B.txt  boris_push_ex4_EBLF.txt  boris_push_ex5_EB1A.txt  boris_push_ex5_EB1B.txt  boris_push_ex5_EB2B.txt  boris_push_ex5_EBLF.txt  boris_push_ex6_EB1A.txt  boris_push_ex6_EB1B.txt  boris_push_ex6_EB2B.txt  boris_push_ex6_EB2B_0.01pi.txt  boris_push_ex6_EBLF.txt  crossed_gradient_EB1A.txt  crossed_gradient_EB1B.txt  crossed_gradient_EBLF.txt  curvilinear_b_B1A.txt  curvilinear_b_B1B.txt  linear_b_B2B.txt  (+5 more)
tests/chin_output/: chin_crossed_fields_EB1A.txt  chin_crossed_fields_EB1B.txt  chin_crossed_fields_EB2B.txt  chin_crossed_gradient_EB1B.txt  chin_crossed_gradient_EBLF.txt  chin_curvilinear_b_B1B.txt  chin_curvilinear_b_BLF.txt  chin_gyration_B1B.txt  chin_gyration_M1A.txt  chin_gyration_M1B.txt  chin_polarization_EB1A.txt  chin_polarization_EB1B.txt  chin_polarization_EBLF.txt  chin_uniform_b_B1B.txt  chin_uniform_b_C1A.txt  chin_uniform_b_C1B.txt  chin_uniform_b_M2B.txt
tests/crank_nicolson_push/: CMakeLists.txt  crank_nicolson_push.h  crank_nicolson_push_ex1.cpp  crank_nicolson_push_ex2.cpp  crank_nicolson_push_ex3.cpp
tests/crank_nicolson_push/expected/crank_nicolson_push_ex1/temporal/: OmegaDt_1.0.txt  OmegaDt_10.0.txt  omega_dt_0.1.txt  omega_dt_1.0.txt  omega_dt_10.0.txt  omega_dt_100.0.txt  omega_dt_1000.0.txt
tests/crank_nicolson_push/expected/crank_nicolson_push_ex2/temporal/: OmegaDt_0.1.txt  omega_dt_0.1.txt  omega_dt_1.0.txt  omega_dt_10.0.txt  omega_dt_100.0.txt  (+1 more)
tests/diagnostics/: CMakeLists.txt  field_view.cpp  simulation_backup.cpp
tests/diagnostics/output/field_view/: 0
tests/drift_kinetic/: CMakeLists.txt  drift_kinetic_ex1.cpp
tests/drift_kinetic/expected/eccapfim_ex1/: config.json
tests/drift_kinetic_push/: CMakeLists.txt  drift_kinetic_grid_boris_comparison.py  drift_kinetic_grid_boris_ex1.cpp  drift_kinetic_grid_boris_ex2.cpp  drift_kinetic_grid_boris_ex3.cpp  drift_kinetic_grid_boris_ex4.cpp  drift_kinetic_grid_boris_ex5.cpp  drift_kinetic_grid_ex1.cpp  drift_kinetic_grid_ex2.cpp  drift_kinetic_grid_ex3.cpp  drift_kinetic_grid_ex4.cpp  drift_kinetic_interpolation_ex1.cpp  drift_kinetic_interpolation_ex2.cpp  drift_kinetic_interpolation_ex3.cpp  drift_kinetic_push.h  drift_kinetic_push_ex1.cpp  drift_kinetic_push_ex2.cpp  drift_kinetic_push_ex3.cpp  drift_kinetic_push_ex4.cpp  drift_kinetic_push_ex5.cpp  drift_kinetic_push_ex6_1.cpp  drift_kinetic_push_ex6_2.cpp  drift_kinetic_push_ex6_3.cpp  drift_kinetic_push_ex7_1.cpp  drift_kinetic_push_ex7_2.cpp  drift_kinetic_push_ex7_3.cpp  drift_kinetic_push_ex8.cpp  drift_kinetic_push_ex9.cpp  drift_kinetic_push_ex9_comparison.py
tests/eccapfim/: CMakeLists.txt  eccapfim_ex1.cpp
tests/ecsim/: CMakeLists.txt  ecsim_ex1.cpp
tests/ecsim/expected/ecsim_ex1/: config.json
tests/ecsimcorr/: CMakeLists.txt  ecsimcorr_ex1.cpp  ex1.cpp
tests/ecsimcorr/expected/ecsimcorr_ex1/: config.json
(+360 files in other folders)
